# xcompact3d_toolbox

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Docstrings.html  LICENSE  MANIFEST.in  README.md  changelog.html  genindex.html  hatch.toml  index.html  news.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.in  requirements.txt  ruff_defaults.toml  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  towncrier.toml
.binder/: requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: 1-prepare-release.yaml  2-tag-release.yaml  check-links.yaml  ci.yaml  docs.yaml  python-package.yml
_sources/: Docstrings.rst  news.md
_sources/examples/: Axisymmetric_flow.ipynb  Heat-exchanger.ipynb
_sources/references/: what-is-new.md
_sources/tutorial/: computing_and_plotting.ipynb  io.ipynb  parameters.ipynb
changelog.d/: +1f5c6649.fixed.md  +2d6c6ab2.misc.md  +4517c34f.changed.md  +548c549a.added.md  +651a832a.changed.md  +659925a9.fixed.md  +66ff54ce.fixed.md  +80ff934b.changed.md  +86de082c.added.md  +a7c50061.added.md  +b768adc2.changed.md  +b7e6f42f.changed.md  +c71ded6a.fixed.md  +c9f0a36f.fixed.md  +d7de31ca.deprecated.md  +da614109.docs.md  +f2260584.docs.md
docs/: Docstrings.rst  _config.yml  _toc.yml  changelog.md  conf.py  how-to-contribute.md  index.rst  news.md  references.bib  requirements.txt  tutorial.rst
docs/examples/: Axisymmetric_flow.ipynb  Cylinder.ipynb  Heat-exchanger.ipynb  Square.ipynb
docs/references/: how-to-contribute.md
docs/tutorial/: computing_and_plotting.ipynb  io.ipynb  parameters.ipynb
examples/: Axisymmetric_flow.html  Cylinder.html  Heat-exchanger.html  Square.html
references/: api-reference.html  how-to-contribute.html  what-is-new.html
src/xcompact3d_toolbox/: array.py  derive.py  genepsi.py  gui.py  io.py  mesh.py  param.py  parameters.py  sandbox.py
tests/: conftest.py
tests/integration/: test_arrays_io.py  test_genepsi.py  test_stretched_derivatives.py
tests/integration/data/: input.i3d
tests/unit/: test_array.py  test_derivatives.py  test_io.py  test_mesh.py  test_parameters.py  test_sandbox.py
tests/unit/data/: snapshots_istret_0.xdmf  snapshots_istret_1.xdmf
tests/unit/parameters/: test_config_parser.py  test_types.py
tutorial/: computing_and_plotting.html  io.html  parameters.html
xcompact3d_toolbox/: README.md  __init__.py  _version.py  array.py  derive.py  genepsi.py  gui.py  io.py  mesh.py  param.py  parameters.py  sandbox.py  tutorial.py
xcompact3d_toolbox/parameters/: configparser.py  gui.py  parameters.py  types.py
